Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43278

ASSERT QSGNode::reparentChildNodesTo - "newParent is already part of a hierarchy"

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.5.0
    • 5.5.0
    • Quick: SceneGraph
    • None
    • d8a09da9a49fa71bb127b5f0ba86e8f5e01c180c

    Description

      In the dev branch, the qt quick controls auto tests sometimes fail with the error: ASSERT QSGNode::reparentChildNodesTo - "newParent is already part of a hierarchy".

      It is not always the same test that triggers that assert.

      See for example in https://codereview.qt-project.org/#/c/101573/:

      QFATAL : qtquickcontrols::Tests_SpinBox::test_keyboard_input(-20) ASSERT failure in QSGNode::reparentChildNodesTo: "newParent is already part of a hierarchy", file scenegraph/coreapi/qsgnode.cpp, line 585
      

      Locally, I have:

      QFATAL : qtquickcontrols::Tests_ComboBox::test_activated() ASSERT failure in QSGNode::reparentChildNodesTo: "newParent is already part of a hierarchy", file /home/caroline/git/dev/qtdeclarative/src/quick/scenegraph/coreapi/qsgnode.cpp, line 585
      FAIL!  : qtquickcontrols::Tests_ComboBox::test_activated() Received a fatal error.
      

      It may be related to https://codereview.qt-project.org/#/c/97223/

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sletta Gunnar Sletta
            carochao Caroline Chao (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes