src/quick/scenegraph/coreapi/qsgnode.cpp
@@ -582,8 +582,6 @@ void QSGNode::removeAllChildNodes()
  */
 void QSGNode::reparentChildNodesTo(QSGNode *newParent)
 {
-    Q_ASSERT_X(!newParent->parent(), "QSGNode::reparentChildNodesTo", "newParent is already part of a hierarchy");
-
     for (QSGNode *c = firstChild(); c; c = firstChild()) {
         removeChildNode(c);
         newParent->appendChildNode(c);
